Fixed misalignment issue with the x button when vertical scroll bar is present.

--- a/davidmodal.css
+++ b/davidmodal.css
@@ -17,7 +17,7 @@
     margin-top: 10vh;
     border-radius: 0.25rem;
     box-shadow: 0 0 20px 10px rgba(0,0,0,0.5);
-    width: 80vw;
+    width: 80%;
     height: 80vh
 }
 
@@ -25,7 +25,7 @@
     cursor: pointer;
     position: absolute;
     top: 10vh;
-    right: 10vw;
+    right: 10%;
     border-left: 1px solid rgb(150, 150, 150);
     border-bottom: 1px solid rgb(150, 150, 150);
     border-top-right-radius: 0.25rem;
